--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,14 @@
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 
+/* Variables */
+$base-font-size: 10px;
+$font-family: Tahoma, Arial, sans-serif;
+$primary-color: #4d5791;
+$secondary-color: #b4c6f0;
+$text-color: #fff;
+$hover-bg-color: $text-color;
+$hover-text-color: $primary-color;
+
 /* Document
    ========================================================================== */
 
@@ -8,7 +17,7 @@
  * 2. Prevent adjustments of font size after orientation changes in iOS.
  */
 
- html {
+html {
   line-height: 1.15; /* 1 */
   -webkit-text-size-adjust: 100%; /* 2 */
 }
@@ -22,6 +31,8 @@
 
 body {
   margin: 0;
+  font-size: $base-font-size;
+  font-family: $font-family;
 }
 
 /**
@@ -174,7 +185,7 @@ textarea {
  */
 
 button,
-input { /* 1 */
+input {
   overflow: visible;
 }
 
@@ -184,7 +195,7 @@ input { /* 1 */
  */
 
 button,
-select { /* 1 */
+select {
   text-transform: none;
 }
 
@@ -193,9 +204,9 @@ select { /* 1 */
  */
 
 button,
-[type="button"],
-[type="reset"],
-[type="submit"] {
+[type='button'],
+[type='reset'],
+[type='submit'] {
   -webkit-appearance: button;
 }
 
@@ -204,9 +215,9 @@ button,
  */
 
 button::-moz-focus-inner,
-[type="button"]::-moz-focus-inner,
-[type="reset"]::-moz-focus-inner,
-[type="submit"]::-moz-focus-inner {
+[type='button']::-moz-focus-inner,
+[type='reset']::-moz-focus-inner,
+[type='submit']::-moz-focus-inner {
   border-style: none;
   padding: 0;
 }
@@ -216,9 +227,9 @@ button::-moz-focus-inner,
  */
 
 button:-moz-focusring,
-[type="button"]:-moz-focusring,
-[type="reset"]:-moz-focusring,
-[type="submit"]:-moz-focusring {
+[type='button']:-moz-focusring,
+[type='reset']:-moz-focusring,
+[type='submit']:-moz-focusring {
   outline: 1px dotted ButtonText;
 }
 
@@ -267,8 +278,8 @@ textarea {
  * 2. Remove the padding in IE 10.
  */
 
-[type="checkbox"],
-[type="radio"] {
+[type='checkbox'],
+[type='radio'] {
   box-sizing: border-box; /* 1 */
   padding: 0; /* 2 */
 }
@@ -277,8 +288,8 @@ textarea {
  * Correct the cursor style of increment and decrement buttons in Chrome.
  */
 
-[type="number"]::-webkit-inner-spin-button,
-[type="number"]::-webkit-outer-spin-button {
+[type='number']::-webkit-inner-spin-button,
+[type='number']::-webkit-outer-spin-button {
   height: auto;
 }
 
@@ -287,7 +298,7 @@ textarea {
  * 2. Correct the outline style in Safari.
  */
 
-[type="search"] {
+[type='search'] {
   -webkit-appearance: textfield; /* 1 */
   outline-offset: -2px; /* 2 */
 }
@@ -296,7 +307,7 @@ textarea {
  * Remove the inner padding in Chrome and Safari on macOS.
  */
 
-[type="search"]::-webkit-search-decoration {
+[type='search']::-webkit-search-decoration {
   -webkit-appearance: none;
 }
 
@@ -348,6 +359,7 @@ template {
   display: none;
 }
 
+
 * {
   box-sizing: border-box;
 }
@@ -359,106 +371,101 @@ template {
   width: 1px;
   height: 1px;
   overflow: hidden;
-}
 
-.skip:focus {
-  position: static;
-  width: auto;
-  height: auto;
-}
-
-body {
-  font-size: 10px;
-  font-family: Tahoma, Arial;
+  &:focus {
+    position: static;
+    width: auto;
+    height: auto;
+  }
 }
 
 nav.menu {
   width: 100%;
-  background-color: #4d5791;
+  background-color: $primary-color;
   height: 44px;
   padding: 0 40px;
-}
 
-nav.menu ul,
-nav.menu ul li {
-  margin: 0;
-  padding: 0 ;
-  list-style: none;
-  display: inline-block;
-}
+  ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    display: inline-block;
 
-nav.menu ul li a {
-  display: block;
-  padding: 0 20px;
-  line-height: 44px;
-  font-size: 1.4em;
-  text-decoration: none;
-  color: #fff;
-  margin: 0;
-}
+    li {
+      display: inline-block;
 
-nav.menu ul li a:hover  {
-  background-color: white;
-  color: #4d5791;
+      a {
+        display: block;
+        padding: 0 20px;
+        line-height: 44px;
+        font-size: 1.4em;
+        text-decoration: none;
+        color: $text-color;
+        margin: 0;
+
+        &:hover {
+          background-color: $hover-bg-color;
+          color: $hover-text-color;
+        }
+      }
+    }
+  }
 }
 
 header.hero {
   height: 350px;
-  background-color: #b4c6f0;
-  background-image: url('/public/bg.png');
+  background-color: $secondary-color;
+  background-image: url('/assets/bg.png');
   background-size: 400px;
   background-repeat: no-repeat;
   background-position: center bottom;
   padding-top: 40px;
-}
 
-header.hero h1,
-header.hero h2 {
-  text-align: center;
-  margin: 0;
-}
+  h1,
+  h2 {
+    text-align: center;
+    margin: 0;
+  }
 
-header.hero h1 {
-  color: #fff;
-  font-size: 4.2em;
-  margin-bottom: 20px;
-}
+  h1 {
+    color: $text-color;
+    font-size: 4.2em;
+    margin-bottom: 20px;
+  }
 
-header.hero h2 {
-  color: #4d5791;
+  h2 {
+    color: $primary-color;
+  }
 }
 
 .container {
   padding: 40px;
   width: 100%;
-}
 
-.page-area {
-  max-width: 768px;
-  display: inline-block;
+  .center {
+    text-align: center;
+  }
+
+  .page-area {
+    max-width: 768px;
+    display: inline-block;
+  }
+
+  article.text-box {
+    display: inline-block;
+    width: 100%;
+    max-width: 340px;
+    text-align: justify;
+    margin: 20px;
+
+    @media screen and (min-width: 768px) {
+      margin: 10px;
+    }
+  }
 }
 
 .bottom {
   height: 50px;
-  background-color: #b4c6f0;
+  background-color: $secondary-color;
   padding: 40px;
-}
-
-.center {
-  text-align: center;
-}
-
-.container article.text-box {
-  display: inline-block;
-  width: 100%;
-  max-width: 340px;
-  text-align: justify;
-  margin: 20px;
-}
-
-
-@media screen and (min-width: 768px) {
-  .container .article.text-box {
-      margin: 10px;
-  }
 }
